User-visible changes in version 0.7.6  (2006-  -  ):
* GUI: fixed peak dragging

User-visible changes in version 0.7.5  (2006-07-31):
* GUI: Definition Manager dialog
* user defined functions (UDF) 
* GUI: gradient dialog for changing color of many datasets at once
* GUI: new Fit->Run dialog
* So-called domain of simple-variables can be specified ($a = ~3.5 [3 +- 2]),
  it is used only for randomization of the variable by some fitting methods.
* "info" can be redirected to file using "info ... > filename" syntax 
   to truncate the file and "info ... >> file" to appends to the file
* variables with names starting with "_" are auto-deleted when not used
* parameters of Lev-Mar methods can be changed (it was disabled in 0.7.0)
* GUI: pressing Shift in data range mode allows (dis)activate data in rectangle
* r-squared shown in "info fit" output (Emmanuel Lamprecht)
* a few bug fixes

User-visible changes in version 0.7.4  (2006-05-31):
* improved data and sum export
* GUI: optional grid in main plot (see axes configuration dialog) 
* defined function types can be undefined using "undefine Function" syntax
* with option=value[, option2=value2 ...] command ...
  sets value of options for this command only
* GUI: if cut-function-level is set, function limits are shown when cursor 
  is over peak top
* aggregate functions in data expressions: min, max, sum, avg, stddev, darea 
  eg. min(y if 20<x<25)
* "commands[n:m]" replaced with "info commands[n:m]"
* GUI: option "reverse" in auxiliary plot 
* GUI: background removing can be undone (like in version 0.4)
* gamma function for data transformations and variables.
* built-in area-based Pearson VII function.

User-visible changes in version 0.7.3  (2006-04-11):
* extended data transformations: numarea(%f, x1, x2, n) gives area integrated
  numerically (from x1 to x2, n steps), Y = y-%f(x) substracts function from
  data, findx(%f, x1, x2, y) finds x in (x1, x2) such that %f(x)=y,