@@ -1345,9 +1345,10 @@ DefinitionMgrDlg::DefinitionMgrDlg(wxWindow* parent)
     vsizer->Add(remove_btn, 0, wxALIGN_RIGHT|wxALL, 5);
 
     vsizer->Add(new wxStaticText(this, -1, 
-                    wxT("Parameters ('center', 'height', 'fwhm', 'area' ")
-                    wxT("or 'slope',\n'intercept', 'avgy' ")
-                    wxT("can be used in default values; don't put 'x' here)")), 
+        wxT("Parameters (don't put 'x' here).\n")
+        wxT("Default values of functions can be given in terms of:\n")
+        wxT("- if it looks like peak: 'center', 'height', 'fwhm', 'area'\n")
+        wxT("- if it looks like linear: or 'slope',\n'intercept', 'avgy'.")),
                 0, wxALL, 5);
 
     par_g = new wxGrid(this, -1, wxDefaultPosition, wxDefaultSize);
